--- a/index.html
+++ b/index.html
@@ -4,158 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Cards</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      body {
-        background-color: rgb(28, 28, 32);
-        padding-top: 5rem;
-      }
-      .container {
-        position: relative;
-        width: 600px;
-        height: 500px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: url("table-texture.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        border: none;
-        border-radius: 4px;
-        margin: auto;
-      }
-      .img-div {
-        width: 440px;
-        height: 400px;
-        position: relative;
-      }
-      #img1,
-      #img2,
-      #img3,
-      #img4 {
-        position: absolute;
-        border-radius: 6px;
-        object-fit: cover;
-        border: 1px solid gray;
-        box-shadow: 4px 4px 8px black;
-
-        transition: all 0.3s ease-in-out;
-        animation: opacity-scale 1s ease-in;
-      }
-      @keyframes opacity-scale {
-        0% {
-          transform: scale(2) rotate(10deg);
-          opacity: 0;
-        }
-        100% {
-          transform: scale(1) rotate(auto);
-          opacity: 1;
-        }
-      }
-      #img1 {
-        width: 210px;
-        height: 150px;
-        top: 0;
-        transform: rotate(-10deg);
-        z-index: 1;
-      }
-      #img2 {
-        width: 160px;
-        height: 250px;
-        bottom: 30px;
-        transform: rotate(-24deg);
-        z-index: 2;
-      }
-      #img3 {
-        width: 180px;
-        height: 220px;
-        right: 80px;
-        transform: rotate(14deg);
-      }
-      #img4 {
-        width: 240px;
-        height: 180px;
-        bottom: 20px;
-        right: 50px;
-        transform: rotate(-10deg);
-        z-index: 3;
-      }
-      #img1:hover,
-      #img4:hover {
-        transform: rotate(-4deg) scale(1.05);
-        cursor: pointer;
-      }
-      #img3:hover {
-        transform: rotate(24deg) scale(1.05);
-        cursor: pointer;
-      }
-      #img2:hover {
-        transform: rotate(-16deg) scale(1.05);
-        cursor: pointer;
-      }
-      #img1:focus,
-      #img2:focus,
-      #img3:focus,
-      #img4:focus {
-        transform: rotate(0deg) scale(1.5);
-        z-index: 5;
-        top: 20%;
-        left: 20%;
-      }
-      button {
-        background-color: rgb(39, 151, 255);
-        width: 160px;
-        height: 40px;
-        border: none;
-        border-radius: 4px 20px 4px 20px;
-        color: white;
-        font-size: 1.1rem;
-        box-shadow: 2px 2px 4px black;
-        position: absolute;
-        top: 10px;
-        right: -60px;
-
-        transition: all 0.5s;
-      }
-      button:hover {
-        cursor: pointer;
-        padding-right: 50px;
-        background-color: rgb(30, 92, 150);
-        border-radius: 20px 4px 20px 4px;
-      }
-      .loader_container {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: rgb(28, 28, 32);
-        top: 0;
-        left: 0;
-        z-index: 1000;
-      }
-      .loader {
-        width: 40px;
-        height: 40px;
-        border: 5px solid white;
-        border-top: 5px solid rgb(39, 151, 255);
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-      }
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="loader_container">
@@ -163,10 +12,10 @@
     </div>
     <div class="container">
       <div class="img-div">
-        <img src="i1.jpg" alt="" id="img1" tabindex="0" loading="lazy" />
-        <img src="i2.jpg" alt="" id="img2" tabindex="0" loading="lazy" />
-        <img src="i3.jpg" alt="" id="img3" tabindex="0" loading="lazy" />
-        <img src="i4.jpg" alt="" id="img4" tabindex="0" loading="lazy" />
+        <img src="./img/i1.jpg" alt="" id="img1" tabindex="0" loading="lazy" />
+        <img src="./img/i2.jpg" alt="" id="img2" tabindex="0" loading="lazy" />
+        <img src="./img/i3.jpg" alt="" id="img3" tabindex="0" loading="lazy" />
+        <img src="./img/i4.jpg" alt="" id="img4" tabindex="0" loading="lazy" />
       </div>
       <button>Hi !</button>
     </div>
